fixed edge cases and changed visibility of computation display during the calculation.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 1.5rem;
+    font-family: sans-serif;
 }
 
 body{
@@ -59,6 +60,11 @@ body{
 
 .mult{
     grid-area: mult;
+}
+
+#multiply{
+    position: relative;
+    top: 8%;
 }
 
 .divide{
